- Rounding modes GMP_RNDX are now MPFR_RNDX (GMP_RNDX kept for compatibility).
- A new rounding mode (MPFR_RNDA) is available to round away from zero.
- The rounding mode type mp_rnd_t is now mpfr_rnd_t (mp_rnd_t kept for
  compatibility).
- The precision type is now mpfr_prec_t (as in previous versions, both
  mpfr_prec_t and mp_prec_t are accepted, but mp_prec_t may be removed
  in the future).
- Functions mpfr_random and mpfr_random2 have been removed.
- mpfr_get_f and mpfr_get_z now return a ternary value.
- New functions mpfr_buildopt_tls_p and mpfr_buildopt_decimal_p giving
  information about options used at MPFR build time.
- New function mpfr_regular_p.
- New function mpfr_set_zero.
- New function mpfr_digamma.
- New functions mpfr_set_flt and mpfr_get_flt to convert from/to the float type
- New function mpfr_urandom.
- New function mpfr_set_z_2exp (companion to mpfr_get_z_2exp, which was renamed
  from mpfr_get_z_exp in previous versions).
- Speed improvement for large operands in the trigonometric functions
  (mpfr_sin, mpfr_cos, mpfr_tan, mpfr_sin_cos): speedup of about 2.5 for
  10^5 digits, of about 5 for 10^6 digits.
- Speed improvement for large operands of the inverse trigonometric functions
  (arcsin, arccos, arctan): about 2 for 10^3 digits, up to 2.7 for 10^6 digits
- Some documentation files are installed in $docdir.
- The configure script recognizes some extra "long double" formats
  (double big endian, double little endian, double-double big endian).
- Bug fixes.

Changes from versions 2.3.* to version 2.4.0:
- MPFR is now a GNU package.
- Changes in the behavior of mpfr_strtofr and in its documentation
  concerning particular cases where the code and the documentation
  did not match; this change is also present in MPFR 2.3.1.
- Behavior of mpfr_check_range changed: if the value is an inexact
  infinity, the overflow flag is set (in case it was lost); this
  change is also present in MPFR 2.3.2.